--- a/registry/templates/registry/portal/setup.html
+++ b/registry/templates/registry/portal/setup.html
@@ -1,11 +1,11 @@
 {% extends "base/base.html" %}
 
-{% block title %}Membership Portal - Register{% endblock %}
+{% block title %}Membership Portal - Initial Setup{% endblock %}
 
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        Registration
+        Initial Setup - {{ name }}
     </h1>
 
     <div>
