--- a/registry/templates/registry/portal/setup.html
+++ b/registry/templates/registry/portal/setup.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 
-{% block title %}Membership Portal - Initial Setup{% endblock %}
+{% block title %}Membership Portal - Initial Setup - {{ name }}{% endblock %}
 
 {% block content %}
 <article class="uk-article">
