Cleanup setup views and give different urls

--- a/registry/templates/setup/finished.html
+++ b/registry/templates/setup/finished.html
@@ -9,6 +9,10 @@
     </h1>
 
     <div>
+        Some text here ...
+    </div>
+
+    <div>
         <a href="/" style="color: black; ">
             <button class="uk-button uk-width-1-1" type="button">Continue to Portal</button>
         </a>
