--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -48,5 +48,11 @@
         </a>
     </div>
 
+    <div>
+        <a href="/edit/payment/" style="color: black; ">
+            <button class="uk-button uk-width-1-1" type="button">Edit Payment Information</button>
+        </a>
+    </div>
+
 </article>
 {% endblock %}
