--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load uikit_tags %}
 
 {% block title %}Membership Portal - Edit - {{ name }} {% endblock %}
 
@@ -15,9 +16,9 @@
     </div>
 
     <div>
-        <form class="uk-form" method="POST">
+        <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form | as_uikit_form }}
             <input type="submit" class="uk-button" value="Update">
         </form>
     </div>
