--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 
-{% block title %}Membership Portal - Jacobs University Bremen Alumni {% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
 <article class="uk-article">
