--- a/registry/templates/setup/finished.html
+++ b/registry/templates/setup/finished.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 
-{% block title %}Membership Portal - Initial Setup Done{% endblock %}
+{% block title %}Initial Setup Done{% endblock %}
 
 {% block content %}
 <article class="uk-article">
