--- a/registry/templates/setup/register.html
+++ b/registry/templates/setup/register.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %}Membership Portal - Register{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block content %}
 <article class="uk-article">
