--- a/registry/templates/setup/setup.html
+++ b/registry/templates/setup/setup.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %}Membership Portal - Initial Setup - {{ name }}{% endblock %}
+{% block title %}Initial Setup - {{ name }}{% endblock %}
 
 {% block content %}
 <article class="uk-article">
