--- a/registry/templates/base/base.html
+++ b/registry/templates/base/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="utf-8" />
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - Membership Portal - Jacobs University Bremen Alumni</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="en" />
@@ -18,11 +18,22 @@
     {% endblock %}
     </head>
     <body>
-        <div class="main-container uk-padding">
-            {% block content %}
+        <div class="fill uk-offcanvas-content">
+            {% block header %}
+                {% include "base/header.html" %}
             {% endblock %}
+
+            <div class="main-container uk-padding header-top-margin">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
 
+        <div class="uk-offcanvas-content">
+            {% block footer %}
+                    {% include "base/footer.html" %}
+            {% endblock %}
+        </div>
 
         {% block scripts %}
             <script src="{% static "uikit/js/uikit.js" %}" type="text/javascript"></script>
