--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -1,20 +1,13 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %}Membership Portal - Edit - {{ name }} {% endblock %}
+{% block title %}Edit - {{ name }} {% endblock %}
 
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
         Edit Data - {{ name }}
     </h1>
-
-    <div>
-        <a href="/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Back to Portal</button>
-        </a>
-    </div>
-
     <div>
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
