Add a change password view

--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -19,6 +19,12 @@
     </div>
 
     <div>
+        <a href="/edit/password/" style="color: black; ">
+            <button class="uk-button uk-width-1-1" type="button">Edit Password</button>
+        </a>
+    </div>
+
+    <div>
         <a href="/edit/address/" style="color: black; ">
             <button class="uk-button uk-width-1-1" type="button">Edit Address</button>
         </a>
