--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -8,6 +8,16 @@
     <h1 class="uk-article-title">
         Edit Data - {{ name }}
     </h1>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="uk-alert{% if message.tags %}-{{ message.tags }}{% endif %}" uk-alert>
+                <a class="uk-alert-close" uk-close></a>
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     <div>
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
