--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -8,50 +8,39 @@
         Jacobs Alumni Membership Portal
     </h1>
 
-    <div>
-        Hey {{ user.alumni.firstName }}! You can edit your data here.
-    </div>
+    <p class="uk-article-lead">
+        Welcome to the membership portal of the Jacobs University Bremen Alumni organisation.
+        This is where you can view and edit your membership information.
+    </p>
 
-    <div>
-        <a href="/edit/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit General Information</button>
-        </a>
-    </div>
+    <div data-uk-grid>
 
-    <div>
-        <a href="/edit/password/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Password</button>
-        </a>
-    </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/general.html" %}
+        </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/account.html" %}
+        </div>
 
-    <div>
-        <a href="/edit/address/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Address</button>
-        </a>
-    </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/address.html" %}
+        </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/payment.html" %}
+        </div>
 
-    <div>
-        <a href="/edit/jacobs/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Jacobs Data</button>
-        </a>
-    </div>
 
-    <div>
-        <a href="/edit/social/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Social Media Links</button>
-        </a>
-    </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/job.html" %}
+        </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/jacobs.html" %}
+        </div>
 
-    <div>
-        <a href="/edit/job/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Job Information</button>
-        </a>
-    </div>
 
-    <div>
-        <a href="/edit/payment/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Edit Payment Information</button>
-        </a>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/social.html" %}
+        </div>
     </div>
 
 </article>
