--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -1,65 +1,70 @@
 {% extends "base/base.html" %}
+{% load uikit_tags %}
 
 {% block head %}
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
-    // Create a Stripe client
-var stripe = Stripe('{{ publishable_key }}');
+    window.onload = function () {
+        // Create a Stripe client
+        var stripe = Stripe('{{ publishable_key }}');
 
-// Create an instance of Elements
-var elements = stripe.elements();
+        // Create an instance of Elements
+        var elements = stripe.elements();
 
-// Custom styling can be passed to options when creating an Element.
-// (Note that this demo uses a wider set of styles than the guide below.)
-var style = {
-  base: {
-    color: '#32325d',
-    lineHeight: '18px',
-    fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-    fontSmoothing: 'antialiased',
-    fontSize: '16px',
-    '::placeholder': {
-      color: '#aab7c4'
-    }
-  },
-  invalid: {
-    color: '#fa755a',
-    iconColor: '#fa755a'
-  }
-};
-
-// Create an instance of the card Element
-var card = elements.create('card', {style: style});
-
+        // Custom styling can be passed to options when creating an Element.
+        // (Note that this demo uses a wider set of styles than the guide below.)
+        var style = {
+            base: {
+                color: '#32325d',
+                lineHeight: '18px',
+                fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+                fontSmoothing: 'antialiased',
+                fontSize: '16px',
+                '::placeholder': {
+                    color: '#aab7c4'
+                }
+            },
+            invalid: {
+                color: '#fa755a',
+                iconColor: '#fa755a'
+            }
+        };
+        // Create an instance of the card Element
+        var card = elements.create('card', {style: style});
 // Add an instance of the card Element into the `card-element` <div>
-card.mount('#card-element');
+        card.mount('#card-element');
+        // Handle real-time validation errors from the card Element.
+        card.addEventListener('change', function (event) {
+            var displayError = document.getElementById('card-errors');
+            if (event.error) {
+                displayError.textContent = event.error.message;
+            } else {
+                displayError.textContent = '';
+            }
+        });
 
-// Handle real-time validation errors from the card Element.
-card.addEventListener('change', function(event) {
-  var displayError = document.getElementById('card-errors');
-  if (event.error) {
-    displayError.textContent = event.error.message;
-  } else {
-    displayError.textContent = '';
-  }
-});
+        function stripeTokenHandler(token) {
+            document.getElementById('id_token').value = token;
+            document.getElementById("payment-form").submit();
+        }
 
 // Handle form submission
-var form = document.getElementById('payment-form');
-form.addEventListener('submit', function(event) {
-  event.preventDefault();
+        var form = document.getElementById('payment-form');
+        form.addEventListener('submit', function (event) {
+            event.preventDefault();
 
-  stripe.createToken(card).then(function(result) {
-    if (result.error) {
-      // Inform the user if there was an error
-      var errorElement = document.getElementById('card-errors');
-      errorElement.textContent = result.error.message;
-    } else {
-      // Send the token to your server
-      stripeTokenHandler(result.token);
-    }
-  });
-});
+            stripe.createToken(card).then(function (result) {
+                if (result.error) {
+                    // Inform the user if there was an error
+                    var errorElement = document.getElementById('card-errors');
+                    errorElement.textContent = result.error.message;
+                } else {
+                    // Send the token to your server
+                    stripeTokenHandler(result.token);
+                }
+            });
+        });
+    };
 </script>
     <style>
     /**
@@ -93,20 +98,23 @@ form.addEventListener('submit', function(event) {
 
 {% block content %}
 <div class="row">
-<form action="/charge" method="post" id="payment-form">
-  <div class="form-row">
-    <label for="card-element">
-      Credit or debit card
-    </label>
-    <div id="card-element">
-      <!-- a Stripe Element will be inserted here. -->
-    </div>
+    <form action="/setup/payment/" method="post" id="payment-form">
+        {% csrf_token %}
+        <label for="tier">Membership Tier</label>
+        {{ form | as_uikit_form }}
+        <div class="form-row">
+            <label for="card-element">
+                Credit or debit card
+            </label>
+            <div id="card-element">
+                <!-- a Stripe Element will be inserted here. -->
+            </div>
 
-    <!-- Used to display form errors -->
-    <div id="card-errors" role="alert"></div>
-  </div>
+            <!-- Used to display form errors -->
+            <div id="card-errors" role="alert"></div>
+        </div>
 
-  <button>Submit Payment</button>
-</form>
+        <button>Submit Payment</button>
+    </form>
 </div>
 {% endblock %}
