finalize payments mvp

--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -44,7 +44,7 @@
         });
 
         function stripeTokenHandler(token) {
-            document.getElementById('id_token').value = token;
+            document.getElementById('id_token').value = token.id;
             document.getElementById("payment-form").submit();
         }
 
