--- a/registry/templates/auth/login.html
+++ b/registry/templates/auth/login.html
@@ -13,7 +13,7 @@
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
             {{ form | as_uikit_form }}
-            <input type="submit" class="uk-button" value="Login">
+            <input type="submit" class="uk-button uk-button-primary" value="Login">
         </form>
     </div>
 </article>
