--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -22,7 +22,7 @@
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
             {{ form | as_uikit_form }}
-            <input type="submit" class="uk-button" value="Update">
+            <input type="submit" class="uk-button uk-button-primary" value="Update">
         </form>
     </div>
 </article>
