--- a/registry/templates/setup/setup.html
+++ b/registry/templates/setup/setup.html
@@ -1,19 +1,22 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %}Initial Setup - {{ name }}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        Initial Setup - {{ name }}
+        {{ title }}
+        {% if subtitle %}
+            <span class="uk-text-muted"> - {{ subtitle }}</span>
+        {% endif %}
     </h1>
 
     <div>
         <form class="uk-form-horizontal" method="POST">
             {% csrf_token %}
             {{ form | as_uikit_form }}
-            <input type="submit" class="uk-button" value="Continue">
+            <input type="submit" class="uk-button uk-button-primary" value="{{ next_text }}">
         </form>
     </div>
 </article>
