--- a/registry/templates/setup/finished.html
+++ b/registry/templates/setup/finished.html
@@ -5,16 +5,17 @@
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        Initial Setup Done
+        Congratulations!
     </h1>
 
     <div>
-        Some text here ...
+        You have completed the registration process.
+        You can now use the portal to view and update your data.
     </div>
 
     <div>
-        <a href="/" style="color: black; ">
-            <button class="uk-button uk-width-1-1" type="button">Continue to Portal</button>
+        <a href="/" class="uk-button uk-button-primary uk-width-1-1">
+            Continue to Portal
         </a>
     </div>
 </article>
