--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -13,6 +13,8 @@
         This is where you can view and edit your membership information.
     </p>
 
+    {% include "portal/approval_warning.html" %}
+
     <div data-uk-grid>
 
         <div class="uk-width-1-2">
