Membership approval warning

--- a/registry/templates/portal/approval_warning.html
+++ b/registry/templates/portal/approval_warning.html
@@ -1,9 +1,9 @@
 {% if not user.alumni.approval.approval %}
 <div class="uk-alert uk-alert-warning" uk-alert>
-    <h3>Membership not yet approved</h3>
+    <h3>Membership approval pending</h3>
     <p>
-        As you are a new member, your membership is still under review.
-        We will contact as soon as your membership has been approved.
+        If you are an existing member, we will connect your updated account to your existing Google account. <br />
+        If you are a new member, we will be reviewing your application and get back to youyou’re your Google account details.
     </p>
 </div>
 
