--- a/registry/templates/setup/finished.html
+++ b/registry/templates/setup/finished.html
@@ -8,9 +8,17 @@
         Congratulations!
     </h1>
 
-    <div>
-        You have completed the registration process.
-        You can now use the portal to view and update your data.
+    <div class="uk-text-lead">
+        You have completed the registration process. <br />
+
+        You can now use the portal to view and update your data. <br />
+
+        In the meantime we will be reviewing your application. <br />
+
+        If you are an existing member, we will connect your updated account to your existing Google account to finalize the registration. <br />
+
+        If you are a new member, we will create your Google account and get back to you with further details.
+
     </div>
 
     <div>
