--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -31,17 +31,19 @@
             {% include "portal/parts/payment.html" %}
         </div>
 
+        <div class="uk-width-1-2">
+            {% include "portal/parts/jacobs.html" %}
+        </div>
+        <div class="uk-width-1-2">
+            {% include "portal/parts/social.html" %}
+        </div>
+
 
         <div class="uk-width-1-2">
             {% include "portal/parts/job.html" %}
         </div>
         <div class="uk-width-1-2">
-            {% include "portal/parts/jacobs.html" %}
-        </div>
-
-
-        <div class="uk-width-1-2">
-            {% include "portal/parts/social.html" %}
+            {% include "portal/parts/skills.html" %}
         </div>
     </div>
 
