--- a/registry/templates/portal/parts/address.html
+++ b/registry/templates/portal/parts/address.html
@@ -29,8 +29,14 @@
                 </tr>
 
                 <tr>
+                    <td>Included on Alumni Map</td>
+                    <td>{{ user.alumni.address.addressVisible|print_boolean }}</td>
+                </tr>
+
+                <tr>
                     <td>Country</td>
                     <td>{{ user.alumni.address |get_choice_field:"country"|safe }}</td>
+                </tr>
             </tbody>
         </table>
     </div>
