--- a/registry/templates/portal/approval_warning.html
+++ b/registry/templates/portal/approval_warning.html
@@ -3,7 +3,7 @@
     <h3>Membership approval pending</h3>
     <p>
         If you are an existing member, we will connect your updated account to your existing Google account. <br />
-        If you are a new member, we will be reviewing your application and get back to youyou’re your Google account details.
+        If you are a new member, we will be reviewing your application and get back to you with your Google account details.
     </p>
 </div>
 
