--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -52,8 +52,6 @@
             card.addEventListener('change', function (event) {
                 var displayError = document.getElementById('card-errors');
 
-                $("#submit").attr('disabled', 'disabled');
-
                 // if there was an error, show it
                 if (event.error) {
                     errorElement.style.display = 'block';
@@ -70,7 +68,7 @@
 
             function stripeTokenHandler(token) {
                 document.getElementById('id_token').value = token.id;
-                document.getElementById("payment-form").submit();
+                $("payment-form").submit();
             }
 
             // the element displaying errors
@@ -84,6 +82,7 @@
             var form = document.getElementById('payment-form');
             form.addEventListener('submit', function (event) {
                 event.preventDefault();
+                $("#submit").attr('disabled', 'disabled');
 
                 // hide the error message (if any)
                 errorElement.style.display = 'none';
@@ -96,6 +95,8 @@
                         errorElement.style.display = 'block';
                         errorElement.style.visibility = 'visible';
                         errorElement.textContent = result.error.message;
+                        $("#submit").removeAttr('disabled');
+
                     } else {
                         // Send the token to your server
                         stripeTokenHandler(result.token);
