--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -68,7 +68,7 @@
 
             function stripeTokenHandler(token) {
                 document.getElementById('id_token').value = token.id;
-                $("payment-form").submit();
+                $("#payment-form").submit();
             }
 
             // the element displaying errors
