--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -66,7 +66,10 @@
                 }
             });
 
+            var done = false;
+
             function stripeTokenHandler(token) {
+                done = true;
                 document.getElementById('id_token').value = token.id;
                 $("#payment-form").submit();
             }
@@ -81,6 +84,7 @@
             // Handle form submission
             var form = document.getElementById('payment-form');
             form.addEventListener('submit', function (event) {
+                if(done) { return; }
                 event.preventDefault();
                 $("#submit").attr('disabled', 'disabled');
 
